--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&family=Titillium+Web:wght@300&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing:border-box ;
+}
 .App {
+  font-family:'Quicksand', sans-serif ;
   text-align: center;
 }
 
