--- a/frontend/src/components/NavLink.css
+++ b/frontend/src/components/NavLink.css
@@ -1,17 +1,16 @@
 .NavbarItems{
-    background-color: #fff;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
-    width: 99% ;
-    height: 80px;
-    border-radius: 13px;
+    width: 100% ;
+    height: 65px;
+    border-radius: 0px;
     /* position: fixed; */
     top: 20px;
     left: 50%;
-    transform:translate(0.5%) ;
+    transform:translate(0%) ;
     z-index: 9999;
 }
 
@@ -27,6 +26,8 @@
    grid-gap: 10px;
    list-style: none;
    align-items: center;
+   height: 10px;
+   width: 0%;
 }
 
 .nav-links{
@@ -43,8 +44,8 @@
 }
 
 .nav-links:hover{
-    background-color:#e40a0a ;
-    color: #fff;
+    background-color:#d53434 ;
+    color: #f0e8e8;
     border-radius:4px;
     transition: all 0.2s ease-in-out;
 }
