what we do page

--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -9,7 +9,7 @@
     text-align: center;
 }
 
-.first-des{
+/* .first-des{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -58,6 +58,6 @@
  
  .one-text h2{
      padding-bottom: 1rem;
- }
+ } */
 
 
