--- a/frontend/src/components/NavLink.css
+++ b/frontend/src/components/NavLink.css
@@ -12,6 +12,7 @@
     left: 50%;
     transform:translate(0%) ;
     z-index: 9999;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 .navbar-logo{
