--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -5,19 +5,19 @@
     padding: 1em 1em;
   }
   .row.footer {
-    
     display: grid;
-    grid-template-columns: 2fr 1fr 1fr 2fr;
+    grid-template-columns: 20fr 2fr 2fr 2fr;
     align-items: stretch;
-    background-color: #25262e;
+    background-color: #262630;
     width: 100.7%;
+    min-height: 50px;
   }
   .column {
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 0 2em;
-    min-height: 5em;  
+    /* padding: 0 2em; */
+    min-height: 0em;  
     
   }
   
@@ -27,14 +27,14 @@
   
   .column.contactus{
     color: #ffffff;
-    padding-right: 50px;  
+    /* padding-right: 50px;   */
   }
   
   h3 {
     width: 100%;
     text-align: left;
     color: white;
-    font-size: 1.4em;
+    font-size: 0.9em;
     white-space: nowrap;
   }
   
@@ -61,7 +61,7 @@
   }
   
   .copyright {
-    height:70px;
+    height:10px;
     background-color: rgb(32, 32, 32);
     width: 100.7%;    
   }
@@ -93,5 +93,8 @@
   .bd{
     color: black;
     text-decoration: bold;
+    position: fixed;
   }
   
+
+   
