--- a/frontend/src/components/NavLink.css
+++ b/frontend/src/components/NavLink.css
@@ -1,5 +1,5 @@
 .NavbarItems{
-    background-color: #fff8f8;
+    background-color: #ffffff;
     display: flex;
     justify-content: space-between;
     align-items: center;
