changes in form

--- a/frontend/src/components/NavLink.css
+++ b/frontend/src/components/NavLink.css
@@ -29,7 +29,8 @@
    list-style: none;
    align-items: center;
    height: 45px;
-   width: 35%;
+   width: 45%;
+   margin-top: -0.5%;
 }
 
 .nav-links{
